@@ -4,6 +4,7 @@ Version 5.12.0 (XXX 2022)
  * Major Atomese dictionary extensions, including generation support.
  * Minor tweaks to `any` uniform random parse tree language.
  * Include U+202F NARROW NO-BREAK SPACE as a space character.
+ * Fix PCRE2 regex so that it's thread safe!
 
 Version 5.11.0 (27 Sept 2022)
  * Prototype support for dictionary in the AtomSpace.
